probe-rs/src/flashing/snapshots/probe_rs__flashing__builder__tests__test6.snap
---
source: probe-rs/src/flashing/builder.rs
expression: flash_layout
---
FlashLayout {
    sectors: [
        FlashSector {
            address: 0x00000000,
            size: 0x00001000,
            page_size: 0x00000400,
        },
        FlashSector {
            address: 0x00001000,
            size: 0x00001000,
            page_size: 0x00000400,
        },
    ],
    pages: [
        FlashPage {
            address: 0x00000000,
            size: 0x00000400,
            data: [1024 bytes],
        },
        FlashPage {
            address: 0x00000400,
            size: 0x00000400,
            data: [1024 bytes],
        },
        FlashPage {
            address: 0x00000800,
            size: 0x00000400,
            data: [1024 bytes],
        },
        FlashPage {
            address: 0x00000c00,
            size: 0x00000400,
            data: [1024 bytes],
        },
        FlashPage {
            address: 0x00001000,
            size: 0x00000400,
            data: [928 bytes],
        },
    ],
}
